include $(top_srcdir)/am_include.mk

noinst_LTLIBRARIES=libbtree.la
libbtree_la_SOURCES=\
BTreeAccessBase.cpp \
BTreeBuilder.cpp \
BTreeBuildLevel.cpp \
BTreeCompactNodeAccessor.cpp \
BTreeDuplicateKeyExcn.cpp \
BTreeHeapNodeAccessor.cpp \
BTreeLeafReader.cpp \
BTreeNodeAccessor.cpp \
BTreeNonLeafReader.cpp \
BTreeReader.cpp \
BTreeRecoveryFactory.cpp \
BTreeVerifier.cpp \
BTreeWriter.cpp
