# $Id$

include_directories(${DEFAULT_INCLUDE})

link_directories(${DEFAULT_LIB})

add_definitions(-DFENNEL_EXEC_EXPORTS)

add_library(
exec STATIC
AggComputer.cpp
CartesianJoinExecStream.cpp
ConduitExecStream.cpp
ConfluenceExecStream.cpp
CopyExecStream.cpp
DfsTreeExecStreamScheduler.cpp
DoubleBufferExecStream.cpp
DynamicParam.cpp
ErrorSource.cpp
ErrorTarget.cpp
ExecStream.cpp
ExecStreamGovernor.cpp
ExecStreamGraph.cpp
ExecStreamGraphEmbryo.cpp
ExecStreamScheduler.cpp
MergeExecStream.cpp
MockConsumerExecStream.cpp
MockProducerExecStream.cpp
MockResourceExecStream.cpp
NestedLoopJoinExecStream.cpp
ParallelExecStreamScheduler.cpp
ScratchBufferExecStream.cpp
SegBufferReader.cpp
SegBufferWriter.cpp
SegBufferExecStream.cpp
SegBufferReaderExecStream.cpp
SegBufferWriterExecStream.cpp
SimpleExecStreamGovernor.cpp
SingleInputExecStream.cpp
SingleOutputExecStream.cpp
SortedAggExecStream.cpp
DiffluenceExecStream.cpp
SplitterExecStream.cpp
BarrierExecStream.cpp
ValuesExecStream.cpp
ReshapeExecStream.cpp
BernoulliSamplingExecStream.cpp
CollectExecStream.cpp
CorrelationJoinExecStream.cpp
UncollectExecStream.cpp
)
