include $(top_srcdir)/am_include.mk

noinst_LTLIBRARIES=libexec.la
libexec_la_SOURCES=\
AggComputer.cpp \
CartesianJoinExecStream.cpp \
ConduitExecStream.cpp \
ConfluenceExecStream.cpp \
CopyExecStream.cpp \
DfsTreeExecStreamScheduler.cpp \
DynamicParam.cpp \
ErrorSource.cpp \
ErrorTarget.cpp \
ExecStream.cpp \
ExecStreamGovernor.cpp \
ExecStreamGraph.cpp \
ExecStreamGraphEmbryo.cpp \
ExecStreamScheduler.cpp \
MergeExecStream.cpp \
MockConsumerExecStream.cpp \
MockProducerExecStream.cpp \
MockResourceExecStream.cpp \
NestedLoopJoinExecStream.cpp \
ParallelExecStreamScheduler.cpp \
ScratchBufferExecStream.cpp \
SegBufferExecStream.cpp \
SimpleExecStreamGovernor.cpp \
SingleInputExecStream.cpp \
SingleOutputExecStream.cpp \
SortedAggExecStream.cpp \
DiffluenceExecStream.cpp \
SplitterExecStream.cpp \
BarrierExecStream.cpp \
ValuesExecStream.cpp \
ReshapeExecStream.cpp \
BernoulliSamplingExecStream.cpp

DESIGN_DOCS=\
ExecStreamDesign.cpp \
ExecStreamHowTo.cpp \
SchedulerDesign.cpp \
ResourceGovernorDesign.cpp

EXTRA_DIST=$(DESIGN_DOCS)
TAGS_DEPENDENCIES=$(DESIGN_DOCS)
ETAGS_ARGS=$(DESIGN_DOCS)
